@@ -1,17 +1,26 @@
 package upowwa;
+
 import java.util.*;
 
 public class Role {
     private static int counter = 0;
+
     private final String id;
     private final String name;
     private final String description;
     private final Set<Permission> permissions;
 
     public Role(String name, String description) {
+        if (name == null || name.trim().isEmpty()) {
+            throw new IllegalArgumentException("Name не может быть null или пустым");
+        }
+        if (description == null || description.trim().isEmpty()) {
+            throw new IllegalArgumentException("Description не может быть null или пустым");
+        }
+
         this.id = "role_" + (++counter);
-        this.name = Objects.requireNonNull(name, "Name не может быть null");
-        this.description = Objects.requireNonNull(description, "Description не может быть null");
+        this.name = name.trim();
+        this.description = description.trim();
         this.permissions = new HashSet<>();
     }
 
@@ -24,22 +33,36 @@ public class Role {
     }
 
     public boolean hasPermission(Permission permission) {
-        return permissions.contains(permission);
+        return permission != null && permissions.contains(permission);
     }
 
     public boolean hasPermission(String permissionName, String resource) {
+        if (permissionName == null || resource == null) {
+            return false;
+        }
         return permissions.stream().anyMatch(p -> p.matches(permissionName, resource));
     }
 
     public Set<Permission> getPermissions() {
-        return Collections.unmodifiableSet(permissions);
+        return Set.copyOf(permissions);
+    }
+
+    public String getId() {
+        return id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public String getDescription() {
+        return description;
     }
 
     @Override
     public boolean equals(Object obj) {
         if (this == obj) return true;
-        if (obj == null || getClass() != obj.getClass()) return false;
-        Role role = (Role) obj;
+        if (!(obj instanceof Role role)) return false;
         return Objects.equals(id, role.id);
     }
 
@@ -50,7 +73,7 @@ public class Role {
 
     @Override
     public String toString() {
-        return String.format("Role{id='%s', name='%s', permissions=%d}", id, name, permissions.size());
+        return "Role{id='%s', name='%s', permissions=%d}".formatted(id, name, permissions.size());
     }
 
     public String format() {
@@ -62,9 +85,5 @@ public class Role {
             sb.append("- ").append(p.format()).append("\n");
         }
         return sb.toString();
-    }
-
-    public String getName() {
-        return name;
     }
 }
